# cairo_real_state_intelligence_platform

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: EDA.md  data_cleaning.md  scraper.md
notebooks/: EDA.ipynb  data_cleaner.ipynb  feature_enginering.ipynb  scraper.ipynb  scrapper.ipynb
src/: cleaning.py  scrape_links.py  scraper.py  utils.py
src/app/: data_loader.py
src/app/components/: sidebar.py
src/app/pages/: chatbot.py  estimator.py  explorer.py  home.py  overview.py
src/app/questions/: Q1.py  Q10.py  Q2.py  Q3.py  Q4.py  Q5.py  Q6.py  Q7.py  Q8.py  Q9.py
