[project]
name = "cairo-real-state-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.13.0",
    "fake-useragent>=2.2.0",
    "ipykernel>=6.31.0",
    "lxml>=6.0.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "selenium>=4.36.0",
    "streamlit>=1.50.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
